--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^4.4.1",
     "next": "latest",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
